# latex-hub

./: .gitignore  CLAUDE.md  LICENSE  README.md  firebase.json
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  firebase.py  main.py
backend/app/routers/: compile.py  projects.py
backend/app/services/: projects.py  storage.py  tectonic.py
backend/app/ws/: collab.py  snapshot.py
backend/tests/: conftest.py  test_compile.py  test_health.py  test_projects.py  test_snapshot.py
frontend/: .env.example  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css
frontend/src/features/auth/: AuthProvider.tsx  LoginPage.tsx
frontend/src/features/auth/__tests__/: LoginPage.test.tsx
frontend/src/features/editor/: EditorPage.tsx  FileTree.tsx  LatexEditor.tsx  PdfPreview.tsx  useProjectFiles.ts  useYjsDoc.ts
frontend/src/features/editor/__tests__/: FileTree.test.tsx
frontend/src/features/projects/: ProjectsPage.tsx
frontend/src/lib/: api.ts  firebase.ts
frontend/src/routes/: router.tsx
infra/: firestore.rules  storage.rules
infra/cloudrun/: deploy.sh  service.yaml
